исправление ошибок фз спиринта 11 (изменен способ получения общих друзей; проверки перенесены из storage-классов в service-классы; тип возвращаемого значения методов findById изменен на Optional<T>