@@ -2,11 +2,14 @@ package ru.yandex.practicum.filmorate.service;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import ru.yandex.practicum.filmorate.exception.NotFoundException;
+import ru.yandex.practicum.filmorate.exception.ValidationException;
 import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.storage.UserStorage;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
+import java.util.Set;
 
 @Service
 public class UserService {
@@ -18,33 +21,52 @@ public class UserService {
     }
 
     public void addFriend(Long user1Id, Long user2Id) {
-        User user1 = userStorage.findById(user1Id); //работает как проверка наличия пользователя с заданным id ->
-        User user2 = userStorage.findById(user2Id); //-> и проверка на null
+        User user1 = findById(user1Id);
+        User user2 = findById(user2Id);
         user1.addFriend(user2.getId());
         user2.addFriend(user1.getId());
     }
 
     public void removeFriend(Long user1Id, Long user2Id) {
-        User user1 = userStorage.findById(user1Id); //работает как проверка наличия пользователя с заданным id ->
-        User user2 = userStorage.findById(user2Id); //-> и проверка на null
+        User user1 = findById(user1Id);
+        User user2 = findById(user2Id);
         user1.removeFriend(user2.getId());
         user2.removeFriend(user1.getId());
     }
 
     public List<User> findMutualFriends(Long user1Id, Long user2Id) {
-        List<User> friends1 = findUserFriends(user1Id);
-        List<User> friends2 = findUserFriends(user2Id);
+        Set<Long> user1FriendsIds = findById(user1Id).getFriends();
+        Set<Long> user2FriendsIds = findById(user2Id).getFriends();
 
-        return friends1.stream()
-                .filter(friends2::contains)
-                .collect(Collectors.toList());
+        List<Long> mutualIds = user1FriendsIds.stream()
+                .filter(user2FriendsIds::contains)
+                .toList();
+
+        return mutualIds.stream()
+                .map(this::findById)
+                .toList();
     }
 
     public User create(User newUser) {
+        if (newUser.getName() == null || newUser.getName().isBlank()) {
+            newUser.setName(newUser.getLogin());
+        }
         return userStorage.create(newUser);
     }
 
     public User update(User newUser) {
+        if (newUser.getId() == null) {
+            throw new ValidationException("id не может быть пустым");
+        }
+
+        Optional<User> userOpt = userStorage.findById(newUser.getId());
+        if (userOpt.isEmpty()) {
+            throw new NotFoundException("пользователь с id = " + newUser.getId() + " не найден");
+        }
+
+        if (newUser.getName() == null || newUser.getName().isBlank()) {
+            newUser.setName(newUser.getLogin());
+        }
         return userStorage.update(newUser);
     }
 
@@ -52,13 +74,21 @@ public class UserService {
         return userStorage.findAll();
     }
 
-    public User findById(long id) {
-        return userStorage.findById(id);
+    public User findById(Long id) {
+        if (id == null) {
+            throw new ValidationException("id не может быть пустым");
+        }
+
+        Optional<User> userOpt = userStorage.findById(id);
+        if (userOpt.isEmpty()) {
+            throw new NotFoundException("пользователь с id " + id + " не найден.");
+        }
+        return userOpt.get();
     }
 
     public List<User> findUserFriends(long id) {
-        return userStorage.findById(id).getFriends().stream()
-                .map(userStorage::findById)
-                .collect(Collectors.toList());
+        return findById(id).getFriends().stream()
+                .map(this::findById)
+                .toList();
     }
 }
